--- a/src/app/components/generate-canvas-tracks/dynamic-track-generator.component.scss
+++ b/src/app/components/generate-canvas-tracks/dynamic-track-generator.component.scss
@@ -122,12 +122,12 @@
 /* Track styling - following GeoToolkit demo patterns */
 .canvas-wrapper ::ng-deep .geotoolkit.welllog.LogTrack {
   fillstyle: #e8f4f8; /* Light blue background for data tracks */
-  strokestyle: #2c3e50; /* Dark blue border */
-  strokewidth: 1;
+  linestyle-color: #2c3e50; /* Dark blue border */
+  linestyle-width: 1;
 }
 
 .canvas-wrapper ::ng-deep .geotoolkit.welllog.IndexTrack {
   fillstyle: #d4e8f0; /* Slightly different shade for index tracks */
-  strokestyle: #2c3e50; /* Same border color as data tracks */
-  strokewidth: 1;
+  linestyle-color: #2c3e50; /* Same border color as data tracks */
+  linestyle-width: 1;
 }
